--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  flutter_bloc: ^9.1.1
+  rxdart: ^0.28.0
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
